Corrected Application Name in Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ before_deploy:
 deploy:
  provider: heroku
  api_key: $HEROKU_API_KEY
- app: starwars-app-be
+ app: insurance-eureka-discovery
  on: main
 
 after_deploy:
