--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.servlet.context-path=/${spring.application.name}
 eureka.client.registerWithEureka = false
 eureka.client.fetchRegistry = false
 eureka.client.healthcheck.enabled=true
-server.port = 8761
+server.port = ${DISCOVERY_PORT:8761}
 
 # Upon startup, the time to wait before eureka will serve its cache.  You want to wait long enough, where you
 # think the cache will be populated enough to provide to backends.  You don't want to serve an empty cache.
