--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
 	</dependencyManagement>
 
 	<build>
-		<finalName>${project.artifactId}}</finalName>
+		<finalName>${project.artifactId}</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
