--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,13 @@
-#spring.application.name=insurance-discovery
-#server.servlet.context-path=/${spring.application.name}
+spring.application.name=eureka
+server.port = ${SERVICE_DISCOVERY_PORT:8761}
 
+eureka.instance.prefer-ip-address: false
+eureka.instance.hostname=localhost
 eureka.client.registerWithEureka = false
 eureka.client.fetchRegistry = false
-eureka.client.healthcheck.enabled=true
-server.port = ${SERVICE_DISCOVERY_PORT:8761}
+#eureka.client.serviceUrl.defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+eureka.client.healthcheck.enabled=false
+
 
 # Upon startup, the time to wait before eureka will serve its cache.  You want to wait long enough, where you
 # think the cache will be populated enough to provide to backends.  You don't want to serve an empty cache.
