--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=eureka
 server.port = ${SERVICE_DISCOVERY_PORT:8761}
 
+eureka.instance.preferIpAddress = false
+
 eureka.client.registerWithEureka = false
 eureka.client.fetchRegistry = false
 #eureka.client.serviceUrl.defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
