Added New Settings

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,9 @@
-spring.application.name=eureka
-server.port = ${SERVICE_DISCOVERY_PORT:8761}
-
-eureka.instance.preferIpAddress = false
+spring.application.name=insurance-discovery
+server.port = ${PORT:0}
 
 eureka.client.registerWithEureka = false
 eureka.client.fetchRegistry = false
-#eureka.client.serviceUrl.defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
 eureka.client.healthcheck.enabled=false
-
 
 # Upon startup, the time to wait before eureka will serve its cache.  You want to wait long enough, where you
 # think the cache will be populated enough to provide to backends.  You don't want to serve an empty cache.
